# Skills

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
skills/resource-hunter/: NEXT_ACTION.md  README.md  SKILL.md  STATUS.md  _meta.json  pyproject.toml
skills/resource-hunter/agents/: openai.yaml
skills/resource-hunter/artifacts/: RELEASE-NOTES-2.1.0.md  RELEASE-NOTES-2.1.1.md  SYNC-CHECKLIST-2.1.0.md
skills/resource-hunter/artifacts/live-tests/: README.md  bing-attack-on-titan.html  brave-attack-on-titan.html  candidate-source-probe.json  dalipan-app-bundle.js  dig_pansearch_dalipan_bundles.py  inspect_bing_candidate_queries.py  inspect_brave_for_lanzou.py  inspect_brave_links.py  inspect_dalipan_bundle.py  inspect_pansearch_bundle.py  inspect_pansearch_results.py  inspect_search_pages.py  inspect_the_merry_widow_1952.py  inspect_znds_queries.py  inspect_znds_search.py  limetorrents-attack-on-titan.html  limetorrents-home.html  pansearch-attack-on-titan.html  pansearch-search-bundle.js  probe_candidate_sources.py  probe_lanzou_domains.py  (+8 more)
skills/resource-hunter/references/: architecture.md  sources.md  usage.md
skills/resource-hunter/scripts/: _bootstrap.py  hunt.py  packaging_gate.py  packaging_report.py  packaging_verify.py  pansou.py  test_hunt.py  torrent.py  video.py
skills/resource-hunter/tests/: test_cli.py  test_intent.py  test_packaging.py  test_packaging_baseline_cli_report.py  test_packaging_gate.py  test_packaging_report.py  test_packaging_verify.py  test_precision.py  test_results.py  test_runtime.py  test_source_expansion.py  test_video.py
(+63 files in other folders)
