[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-hunter"
dynamic = ["version"]
description = "Unified public resource hunter for pan links, torrents, magnets, and public video URLs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT-0"
authors = [{ name = "mnbplus" }]
keywords = ["resource", "pan", "torrent", "magnet", "video", "yt-dlp", "movie", "anime", "tv", "music", "software", "book"]
dependencies = []

[project.optional-dependencies]
dev = ["build>=1.2.2", "pytest>=8.2", "ruff>=0.6.9"]

[project.scripts]
resource-hunter = "resource_hunter.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "resource_hunter._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
